fixed layout problem to allow scroll only beneath appbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,6 @@ body {
 }
 
 body {
-  overflow-y: hidden;
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
